--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <!--stopwatch-->
 <div class="stopwatch">
-    <h2 id="stopwatch_time">00:00</h2>
+    <h2 id="stopwatch_time"><span id="stopwatch_hours_min">00:00</span><span id="stopwatch_seconds">:00</span></h2>
     <div class="stopwatch__btnBox">
     <button id="stopwatch_start" >시작</button>
-    <button id="stopwatch_record" value="">구간기록</button>
     <button id="stopwatch_stop" class="hidden" value="">중지</button>
+    <button id="stopwatch_record" value="">구간기록</button>
     <button id="stopwatch_initial" class="hidden" value="">초기화</button>
     </div>
     
